fix: don’t fail all token check in case of the match fail